nav and shirotan

--- a/index.html
+++ b/index.html
@@ -21,14 +21,39 @@
 			</p>
 		</td>
 		<td>
-			<div class="tour-dates">
-				<h2>tour dates</h2>
-				<ul>
-					<li>coming soon</li>
-				</ul>
+			<div class="content">
+				<div class="tour-dates">
+					<h2>tour dates</h2>
+					<ul>
+						<li>coming soon</li>
+					</ul>
+				</div>
+				<table class="nav">
+					<tr>
+						<td><a href="#">about</a></td>
+					</tr>
+					<tr>
+						<td><a href="#">links</a></td>
+					</tr>
+					<tr>
+						<td><a href="#">contact</a></td>
+					</tr>
+				</table>
 			</div>
 		</td>
+	</tr>
+	<tr class="shit-media-row">
+		<td>
+		</td>
+		<td>
+		</td>
+		<td class="shirotan">
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/GQz1xn5vGpM" frameborder="0" allowfullscreen></iframe>
+		</td>
+	</tr>
 	</table>
+
+
 
 	<script>
 		var canvas = document.getElementById("canvas");
